# hmcan

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: han.yaml  hcan.yaml  hmcan.yaml
docs/: data.md  evaluation.md  index.md  installation.md  models.md  training.md
notebooks/: HAN.ipynb  HCAN.ipynb  HMCAN.ipynb  train_bert_colab.ipynb  train_hmcan_colab.ipynb  train_longformer_colab.ipynb
scripts/: download_data.py
src/hmcan/: __init__.py  __main__.py  config.py
src/hmcan/data/: __init__.py  collate.py  datamodule.py  dataset.py  datasets.py  preprocessing.py  vocabulary.py
src/hmcan/models/: __init__.py  base.py  han.py  hcan.py  hmcan.py  registry.py
src/hmcan/models/layers/: __init__.py  attention.py  embeddings.py  encoder.py
src/hmcan/training/: __init__.py  callbacks.py  metrics.py  trainer.py
src/hmcan/utils/: __init__.py  checkpoint.py  device.py  seed.py
tests/: __init__.py
